Changed style and added error page

--- a/Accountool/appsettings.json
+++ b/Accountool/appsettings.json
@@ -8,5 +8,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 587,
+    "FromAddress": "no-reply@example.com",
+    "FromAddressTitle": "Support Team",
+    "Username": "your_email_username",
+    "Password": "your_email_password"
+  }
 }
